# TheRenderer

./: Cargo.toml  Readme.md
.github/: FUNDING.yml
src/: lib.rs  thebuffer.rs  theevent.rs  therect.rs  therenderer.rs  theshared.rs  thespace.rs  thestate.rs
src/theshadertrait/: mod.rs  thecolorshader.rs
src/theshapetrait/: mod.rs  thedisc.rs
