[package]
name = "therenderer"
version = "0.1.0"
edition = "2021"

[dependencies]
maths-rs = { version = "0.2", features = ["short_types", "short_hand_constructors", "casts", "serde"] }
rayon = "1.7.0"
rustc-hash = "1.1.0"
rust-embed = { version = "6.6.1", default-features = true, features = ["include-exclude"] }
